# Kita

./: .gitignore  Cargo.toml  README.md  setup_environment.sh
src/: main.rs  todo.txt
src/rename/: app.rs  context_menu_tester.rs  debug.rs  edits.rs  mod.rs  mods.rs  presets.rs
src/rename/cli/: parser.rs
src/rename/gui/: mod.rs  window_main.rs
src/rename/gui/main_sub/: bar_bottom.rs  bar_top.rs  file_browser.rs  file_modifications.rs  file_selector.rs  mod.rs
src/rename/gui/popups/: about.rs  debug.rs  hashing.rs  mod.rs  options.rs  preset_manager.rs  quit.rs  save_as_preset.rs  save_confirmation.rs  saving.rs
src/rename/util/: config.rs  contextmenu.rs  dir.rs  hash.rs  icon.rs  mod.rs  threads.rs
src/rename/util/processing/: file_processing.rs  mod.rs
