[package]
name = "kita"
version = "0.13.6"
edition = "2021"

[profile.release]
strip = "symbols"
opt-level = "s"
lto = true

[profile.dev]
debug-assertions = false

[dependencies]
utils = { path = "./dependencies/rust-utils"}
egui = { path = "./dependencies/egui/crates/egui" }
eframe = { path = "./dependencies/egui/crates/eframe" }
egui_extras = { path = "./dependencies/egui/crates/egui_extras" }
egui_plot = { path = "./dependencies/egui/crates/egui_plot" }
whoami = "*"
md-5 = "*"
rfd = "*"
rustc-serialize = "*"
sha1 = "*"
sha2 = "*"
crc32fast = "*"
time = { version = "*", features = ["formatting", "macros"] }
chrono = "*"
regex = "*"
numerals = "*"
alpha-counter = "*"
json = "*"

[target.'cfg(linux)'.dependencies]
users = "*"

[target.'cfg(windows)'.dependencies]
windows = { version = "*", features = [ "Win32", "Win32_Storage", "Win32_Storage_FileSystem" ] }
winapi = { version = "*", features = ["winnt", "wincon"] }


