[package]
name = "kita"
version = "0.25.20"
edition = "2021"

[profile.release]
strip = "symbols"
opt-level = "s"
lto = true

[profile.dev]
debug-assertions = false

[dependencies]
utils = { path = "./dependencies/rust-utils"}
egui = "0.28.1"
eframe = "0.28.1"
egui_extras = "0.28.1"
egui_plot = "0.28.1"
whoami = "*"
md-5 = "*"
rfd = "*"
rustc-serialize = "*"
sha1 = "*"
sha2 = "*"
crc32fast = "*"
time = { version = "*", features = ["formatting", "macros"] }
chrono = "*"
regex = "*"
numerals = "*"
alpha-counter = "*"
json = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"

[target.'cfg(linux)'.dependencies]
users = "*"

[target.'cfg(windows)'.dependencies]
windows = { version = "*", features = [ "Win32", "Win32_Storage", "Win32_Storage_FileSystem" ] }
winapi = { version = "*", features = ["winnt", "wincon"] }
winreg = "*"


