[package]
name = "kita"
version = "1.0.3"
edition = "2021"

[profile.release]
strip = "symbols"
opt-level = "s"
lto = true

[profile.dev]
debug-assertions = false

[dependencies]
utils = { git = "https://github.com/Auvrae/rust-utils"}
egui = "*"
eframe = "*"
egui_extras = "*"
egui_plot = "*"
whoami = "*"
md-5 = "*"
rfd = "*"
rustc-serialize = "*"
sha1 = "*"
sha2 = "*"
crc32fast = "*"
time = { version = "*", features = ["formatting", "macros"] }
chrono = "*"
regex = "*"
numerals = "*"
alpha-counter = "*"
json = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"

[target.'cfg(linux)'.dependencies]
users = "*"

[target.'cfg(windows)'.dependencies]
windows = { version = "*", features = [ "Win32", "Win32_Storage", "Win32_Storage_FileSystem" ] }
winapi = { version = "*", features = ["winnt", "wincon"] }
winreg = "*"


